--- a/view/qrPage.html
+++ b/view/qrPage.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yamamoto Haus</title>
-    <link rel="stylesheet" href="/resources/css/qrPageStyle.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Yamamoto Haus</title>
+
+	<link rel="stylesheet" href="/css/qrPageStyle.css">
 </head>
 
-<body>
-	<div class="content_wrapper">
-		<div>
-			<nav class="menu_container">
-				<div class="title_container">
-					<img src="/resources/images/logo_branca.png" alt="logo branca">
-					<h1>Yamamoto Haus</h1>
-					<h2>Desing de Interiores</h2>
-				</div>
-				<div class="link_container">
-					<a class="pinterest_icon" href="https://br.pinterest.com/yamamotohausinteriores/_created/"></a>
-					<a class="linkedin_icon" href="https://www.linkedin.com/company/yamamoto-haus"></a>
-				</div>
-
-				<ul class="button_container">
-					<li class="first_button">
-						<a href="./index.html">Quem somos</a>
-					</li>
-					<li class="second_button">
-						<a href="https://docs.google.com/forms/d/1eecKKFgnL-C_a-i_kjW8wiDuyLyh4F4YOddRrZkDatc/edit">Quero meu projeto</a>
-					</li>
-					<li class="third_button">
-						<a href="https://www.instagram.com/yamamoto.haus/">Conheça nossos projetos</a>
-					</li>
-				</ul>
-			</nav>
+<body class="background-image">
+	<!-- Content Wrapper -->
+	<nav class="content-wrapper">
+		
+		<!-- Title and Image -->
+		<div class="brand-container">
+			<img class="brand-logo" src="/images/logo_branca.png" alt="logo branca">
+			<h1 class="brand-title">Yamamoto Haus</h1>
+			<h3 class="brand-subtitle">Desing de Interiores</h3>
 		</div>
-	</div>
+
+		<div class="media-container">
+			<a class="pinterest-logo" href="https://br.pinterest.com/yamamotohausinteriores/_created/"></a>
+			<a class="linkedin-logo" href="https://www.linkedin.com/company/yamamoto-haus"></a>
+		</div>
+
+		<ul class="navigation-container">
+			<li class="navigation-button first-button">
+				<a class="navigation-link" href="/">Quem somos</a>
+			</li>
+			<li class="navigation-button second-button">
+				<a class="navigation-link" href="https://docs.google.com/forms/d/1eecKKFgnL-C_a-i_kjW8wiDuyLyh4F4YOddRrZkDatc/edit">Quero meu projeto</a>
+			</li>
+			<li class="navigation-button third-button">
+				<a class="navigation-link" href="https://www.instagram.com/yamamoto.haus/">Conheça nossos projetos</a>
+			</li>
+		</ul>
+
+	</nav>
 </body>
 </html>
