Feat: Created responsive navbar brand icon

--- a/view/home.html
+++ b/view/home.html
@@ -7,7 +7,7 @@
 </head>
 <body class="bg-payne-gray">
 	<header>
-		<nav class="flex items-center w-full h-[15vh] 2xl:h-[20vh] p-5 bg-[url('/public/images/background_granulado.png')] bg-cover bg-no-repeat bg-center bg-fixed">
+		<nav class="flex items-center w-full h-[15vh] 2xl:h-[20vh] p-5 ">
 			<img class="w-[140px] 2xl:w-[160px] h-auto p-[10px] ml-[3%] 2xl:ml-[5%]" src="{{ URL('/images/logo_capim.png') }}" alt="logo branca">
 
 			<div class="flex flex-col ml-[2%] items-center text-green leading-8">
