Feat: Created content loader

--- a/views/home.html
+++ b/views/home.html
@@ -9,46 +9,41 @@
 </head>
 
 <body id="veil">
-
-	<header class="navigation-background-image" id="veil">
+	<header class="navigation-background-image">
 		<nav class="navigation-wrapper">
-			
 			<span class="brand-container">
 				<img class="brand-logo" src="/images/logo_capim.png" alt="logo capim">
-
 				<div class="brand-name-wrapper">
 					<h1 class="brand-title">Yamamoto Haus</h1>
 					<h3 class="brand-subtitle">Desing de interiores</h3>
 				</div>
 			</span>
-			
 			<ul class="navbar-menu">
 				<li class="navbar-menu-item">
 					<a class="navbar-menu-link">Nossa essência</a>
 				</li>
-				
 				<li class="navbar-menu-item">
 					<a class="navbar-menu-link">Serviços</a>
-				</li>
-				
+				</li>			
 				<li class="navbar-menu-item">
 					<a class="navbar-menu-link">Projetos</a>
-				</li>
-				
+				</li>				
 				<li class="navbar-menu-item">
 					<a class="navbar-menu-link">Social</a>
 				</li>
 			</ul>
-			
 			<div id="mobile-navbar">
 				<span class="bar"></span>
 				<span class="bar"></span>
 				<span class="bar"></span>
 			</div>
-
 		</nav>
 	</header>
 
+	<main class="content-wrapper" id="contentWrapper">
+	</main>
+
 	<script src="/js/app.js"></script>
+	<script src="/js/loadContent.js"></script>
 </body>
 </html>
