--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -26,7 +26,11 @@
 
 body {
     background-color: slategrey;
+    display: grid;
+    grid-template-rows: 1fr auto;
+    overflow: hidden;
 }
+
 /* Background Image */
 .navigation-background-image {
     background-image: url(/images/background_granulado.png);
@@ -162,7 +166,11 @@ body {
 
 #mobile-navbar.is-active .bar:nth-child(3) {
     transform: translateY(-8px) rotate(-45deg);
-}  
+}
+
+.content-wrapper {
+    overflow: scroll;
+}
 
 /* Responsive design for screens equal or larger than 640px */
 @media (min-width: 640px) {
