--- a/views/home.html
+++ b/views/home.html
@@ -6,6 +6,7 @@
 	<title>Yamamoto Haus</title>
 
     <link rel="stylesheet" href="/css/homeStyle.css">
+	<link rel="stylesheet" href="/css/section01Style.css">
 </head>
 
 <body id="veil">
