Refactor: css file names

--- a/views/qrPage.html
+++ b/views/qrPage.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Yamamoto Haus</title>
 
-	<link rel="stylesheet" href="/css/qrPageStyle.css">
+	<link rel="stylesheet" href="/css/qrPage.style.css">
 </head>
 
 <body class="background-image">
