--- a/views/home.html
+++ b/views/home.html
@@ -5,8 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Yamamoto Haus</title>
 
-    <link rel="stylesheet" href="/css/homeStyle.css">
-	<link rel="stylesheet" href="/css/section01Style.css">
+    <link rel="stylesheet" href="/css/home.style.css">
+	<link rel="stylesheet" href="/css/section.1.style.css">
+	<link rel="stylesheet" href="/css/section.2.style.css">
 </head>
 
 <body id="veil">
