--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="/css/section.2.style.css">
 </head>
 
-<body id="veil">
+<body>
 	<header class="navigation-background-image">
 		<nav class="navigation-wrapper">
 			<span class="brand-container">
@@ -22,13 +22,13 @@
 			</span>
 			<ul class="navbar-menu">
 				<li class="navbar-menu-item">
-					<a class="navbar-menu-link">Nossa essência</a>
+					<a href="#essence" class="navbar-menu-link">Nossa essência</a>
 				</li>
 				<li class="navbar-menu-item">
-					<a class="navbar-menu-link">Serviços</a>
+					<a href="#section-02" class="navbar-menu-link">Serviços</a>
 				</li>			
 				<li class="navbar-menu-item">
-					<a class="navbar-menu-link">Projetos</a>
+					<a href="#section-03"  class="navbar-menu-link">Projetos</a>
 				</li>				
 				<li class="navbar-menu-item">
 					<a class="navbar-menu-link">Social</a>
@@ -42,8 +42,44 @@
 		</nav>
 	</header>
 
-	<main class="content-wrapper" id="contentWrapper">
-	</main>
+	<section class="section" id="essence">
+		<div class="content-01">
+			<video class="section-01-background-video" autoplay loop muted plays-inline>
+				<source src="" type="video/mp4">
+			</video>
+	
+			<div>
+				<p class="section-01-first-paragraph">“A casa do presente, que pensa no futuro e recorda do passado”</p>
+				<p class="section-01-second-paragraph">Nossa proposta é através da empatia cuidar do presente, valorizar a história e as memórias, e respeitar as futuras gerações.</p>
+				<a class="section-01-button">Conheça nossos projetos</a>
+			</div>
+		</div>
+	</section>
+
+	<section class="section" id="section-02">
+		<div class="content-02">
+	
+		</div>
+		<!-- <h2>“A casa do presente, que pensa no futuro e recorda do passado"</h2>
+		
+		<div class="section-02-card-container">
+			<div>
+				<h3>Natasha M. Yamamoto</h3>
+				<img class="section-02-character-card-one" src="./images/Natasha.jpg" alt="Natasha Michiko">
+			</div>
+			
+			<div>
+				<img class="section-02-character-card-two" src="./images/Hugo.jpg" alt="Hugo Wegner">
+				<h3>Hugo W. de Moura Nessler</h3>
+			</div>
+		</div>
+	
+		<div class="section-02-text-box">
+			<h3>Nossa essência</h3>
+			<p>Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande influência nesse processo.  Visto isso, nosso escritório deseja oferecer através do design biofílico, soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar, através da sustentabilidade e tecnologia. </p>       
+		</div> -->
+	
+	</section>
 
 	<script src="/js/app.js"></script>
 	<script src="/js/loadContent.js"></script>
