--- a/views/section.2.html
+++ b/views/section.2.html
@@ -1,6 +1,8 @@
-<section class="section">
+<section class="section" id="section-02">
+    <div class="content-02">
 
-    <h2>“A casa do presente, que pensa no futuro e recorda do passado"</h2>
+    </div>
+    <!-- <h2>“A casa do presente, que pensa no futuro e recorda do passado"</h2>
     
     <div class="section-02-card-container">
         <div>
@@ -17,6 +19,6 @@
     <div class="section-02-text-box">
         <h3>Nossa essência</h3>
         <p>Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande influência nesse processo.  Visto isso, nosso escritório deseja oferecer através do design biofílico, soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar, através da sustentabilidade e tecnologia. </p>       
-    </div>
+    </div> -->
 
 </section>
