--- a/views/section.3.html
+++ b/views/section.3.html
@@ -1,6 +1,6 @@
-<section class="section" id="section-01">
+<section class="section" id="section-03">
     <div class="content-01">
-        <video class="section-01-background-video" autoplay loop muted plays-inline>
+        <!-- <video class="section-01-background-video" autoplay loop muted plays-inline>
             <source src="" type="video/mp4">
         </video>
 
@@ -8,6 +8,6 @@
             <p class="section-01-first-paragraph">“A casa do presente, que pensa no futuro e recorda do passado”</p>
             <p class="section-01-second-paragraph">Nossa proposta é através da empatia cuidar do presente, valorizar a história e as memórias, e respeitar as futuras gerações.</p>
             <a class="section-01-button">Conheça nossos projetos</a>
-        </div>
+        </div> -->
     </div>
 </section>
