--- a/css/section.1.style.css
+++ b/css/section.1.style.css
@@ -7,22 +7,32 @@
     list-style: none;
 }
 
+:root {
+    --section-01-first-paragraph: #62684d;
+    --section-01-second-paragraph: #62684d;
+    --section-01-button-color: #e6e1d7;
+    --section-01-button-background-color: #4e6982;
+}
+
 .content-01 {
     display: flex;
     align-items: center;
     justify-content: center;
-
-    height: 80vh;
-    width: 100vw;
-    
     text-align: center;
+
+    height: 100%;
+    width: 100%;
+
+    background-color: #D1C9B9;
 }
 
 /*----------------- Vídeo ---------------------------*/
 .section-01-background-video {
     position: absolute;
     object-fit: cover;
-    height: 80vh;
+    top: 0;
+    left: 0;
+    height: 100%;
     width: 100%;
     background-color: aqua;
     z-index: -1;
