--- a/views/qrPage.html
+++ b/views/qrPage.html
@@ -16,7 +16,7 @@
 		<div class="brand-container">
 			<img class="brand-logo" src="/images/logo_branca.png" alt="logo branca">
 			<h1 class="brand-title">Yamamoto Haus</h1>
-			<h3 class="brand-subtitle">Desing de Interiores</h3>
+			<h3 class="brand-subtitle">Design de Interiores</h3>
 		</div>
 
 		<div class="media-container">
