--- a/css/section.1.style.css
+++ b/css/section.1.style.css
@@ -8,13 +8,14 @@
 }
 
 :root {
+    --section-01-content-wrapper-background-color:#D1C9B9;
     --section-01-first-paragraph: #62684d;
     --section-01-second-paragraph: #62684d;
     --section-01-button-color: #e6e1d7;
     --section-01-button-background-color: #4e6982;
 }
 
-.content-01 {
+.section-01-content-wrapper {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,43 +24,63 @@
     height: 100%;
     width: 100%;
 
-    background-color: #D1C9B9;
+    background-color: var(--section-01-content-wrapper-background-color);
 }
 
-/*----------------- Vídeo ---------------------------*/
+/*----------------- Video ---------------------------*/
 .section-01-background-video {
     position: absolute;
     object-fit: cover;
     top: 0;
     left: 0;
+
     height: 100%;
     width: 100%;
-    background-color: aqua;
+
     z-index: -1;
 }
 
-/*----------------- Texto ---------------------------*/
+/*----------------- Text ---------------------------*/
+.section-01-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+
+    height: 100%;
+    width: 100%;
+
+    z-index: 2;
+}
+
 .section-01-first-paragraph {
+    margin: 20px;
+
     color: var(--section-01-first-paragraph);
     font-family: 'Libra-Serif-Modern';
-    font-weight: lighter;
     font-size: 1.6rem;
+    font-weight: lighter;
     letter-spacing: 1.5px;
-    margin: 20px;
 }
 
 .section-01-second-paragraph {
+    margin: 20px;
+
     color: var(--section-01-second-paragraph);
     font-family: 'Montserrat';
-    font-weight: lighter;
     font-size: 1.25rem;
+    font-weight: lighter;
     letter-spacing: 1.2px;
-    margin: 20px;
 }
 
-/*----------------- Botão  --------------------------*/
+/*----------------- Button  --------------------------*/
 
 .section-01-button {
+    padding: 12px 24px;
+    border-radius: 25px;
+    margin: 15px;
+
     color: var(--section-01-button-color);
     background-color: var(--section-01-button-background-color);
     cursor: pointer;
@@ -67,8 +88,4 @@
     font-weight: lighter;
     font-size: 1.6rem;
     letter-spacing: 1.5px;
-    border-radius: 25px;
-    border: none;
-    padding: 12px 24px;
-    margin: 15px;
 }
