--- a/views/home.html
+++ b/views/home.html
@@ -6,6 +6,7 @@
 	<title>Yamamoto Haus</title>
 
     <link rel="stylesheet" href="/css/home.style.css">
+	<link rel="stylesheet" href="/css/navigation.style.css">
 	<link rel="stylesheet" href="/css/section.1.style.css">
 	<link rel="stylesheet" href="/css/section.2.style.css">
 </head>
@@ -13,12 +14,14 @@
 <body>
 	<header class="navigation-background-image">
 		<nav class="navigation-wrapper">
-			<span class="brand-container">
-				<img class="brand-logo" src="/images/logo_capim.png" alt="logo capim">
-				<div class="brand-name-wrapper">
-					<h1 class="brand-title">Yamamoto Haus</h1>
-					<h3 class="brand-subtitle">Desing de interiores</h3>
-				</div>
+			<span>
+				<a href="#" class="brand-container">
+					<img class="brand-logo" src="/images/logo_capim.png" alt="logo capim">
+					<div class="brand-name-wrapper">
+						<h1 class="brand-title">Yamamoto Haus</h1>
+						<h3 class="brand-subtitle">Design de interiores</h3>
+					</div>
+				</a>
 			</span>
 			<ul class="navbar-menu">
 				<li class="navbar-menu-item">
@@ -42,13 +45,13 @@
 		</nav>
 	</header>
 
-	<section class="section" id="essence">
-		<div class="content-01">
+	<section class="section" id="#">
+		<div class="section-01-content-wrapper">
 			<video class="section-01-background-video" autoplay loop muted plays-inline>
-				<source src="" type="video/mp4">
+				<source src="/videos/Mareux - The Perfect Girl (Retrowave_Synthwave cover) Slowed Reverb.mp4" type="video/mp4">
 			</video>
 	
-			<div>
+			<div class="section-01-container">
 				<p class="section-01-first-paragraph">“A casa do presente, que pensa no futuro e recorda do passado”</p>
 				<p class="section-01-second-paragraph">Nossa proposta é através da empatia cuidar do presente, valorizar a história e as memórias, e respeitar as futuras gerações.</p>
 				<a class="section-01-button">Conheça nossos projetos</a>
@@ -56,29 +59,26 @@
 		</div>
 	</section>
 
-	<section class="section" id="section-02">
+	<section class="section" id="essence">
 		<div class="content-02">
-	
-		</div>
-		<!-- <h2>“A casa do presente, que pensa no futuro e recorda do passado"</h2>
-		
-		<div class="section-02-card-container">
-			<div>
-				<h3>Natasha M. Yamamoto</h3>
-				<img class="section-02-character-card-one" src="./images/Natasha.jpg" alt="Natasha Michiko">
-			</div>
+			<!-- <h2>“A casa do presente, que pensa no futuro e recorda do passado"</h2>
+				<div class="section-02-card-container">
+					<div>
+						<h3>Natasha M. Yamamoto</h3>
+						<img class="section-02-character-card-one" src="./images/Natasha.jpg" alt="Natasha Michiko">
+					</div>
+					
+					<div>
+						<img class="section-02-character-card-two" src="./images/Hugo.jpg" alt="Hugo Wegner">
+						<h3>Hugo W. de Moura Nessler</h3>
+					</div>
+				</div>
 			
-			<div>
-				<img class="section-02-character-card-two" src="./images/Hugo.jpg" alt="Hugo Wegner">
-				<h3>Hugo W. de Moura Nessler</h3>
-			</div>
+				<div class="section-02-text-box">
+					<h3>Nossa essência</h3>
+					<p>Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande influência nesse processo.  Visto isso, nosso escritório deseja oferecer através do design biofílico, soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar, através da sustentabilidade e tecnologia. </p>       
+				</div> -->
 		</div>
-	
-		<div class="section-02-text-box">
-			<h3>Nossa essência</h3>
-			<p>Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande influência nesse processo.  Visto isso, nosso escritório deseja oferecer através do design biofílico, soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar, através da sustentabilidade e tecnologia. </p>       
-		</div> -->
-	
 	</section>
 
 	<script src="/js/app.js"></script>
