--- a/views/home.html
+++ b/views/home.html
@@ -48,7 +48,7 @@
 	<section class="section" id="#">
 		<div class="section-01-content-wrapper">
 			<video class="section-01-background-video" autoplay loop muted plays-inline>
-				<source src="/videos/Mareux - The Perfect Girl (Retrowave_Synthwave cover) Slowed Reverb.mp4" type="video/mp4">
+				<source src="" type="video/mp4">
 			</video>
 	
 			<div class="section-01-container">
@@ -82,6 +82,5 @@
 	</section>
 
 	<script src="/js/app.js"></script>
-	<script src="/js/loadContent.js"></script>
 </body>
 </html>
