--- a/views/home.html
+++ b/views/home.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+	<!-- Navigation Menu -->
 	<header class="navigation-background-image">
 		<nav class="navigation-wrapper">
 			<span>
@@ -45,6 +46,7 @@
 		</nav>
 	</header>
 
+	<!-- Section 01 -->
 	<section class="section" id="#">
 		<div class="section-01-content-wrapper">
 			<video class="section-01-background-video" autoplay loop muted plays-inline>
@@ -59,17 +61,23 @@
 		</div>
 	</section>
 
+	<!-- Section 02 -->
 	<section class="section" id="essence">
-		<div class="content-02">
-			<!-- <h2>“A casa do presente, que pensa no futuro e recorda do passado"</h2>
+		<div class="section-02-content-wrapper">
+
+			<div class="section-02-title-container">
+				<h2>“A casa do presente, que pensa no futuro e recorda do passado”</h2>
+			</div>
+
+			<div class="section-02-detail-container">
 				<div class="section-02-card-container">
-					<div>
+					<div class="section-02-card">
 						<h3>Natasha M. Yamamoto</h3>
-						<img class="section-02-character-card-one" src="./images/Natasha.jpg" alt="Natasha Michiko">
+						<img src="../images/character_Natasha.jpg" alt="Natasha Michiko">
 					</div>
 					
-					<div>
-						<img class="section-02-character-card-two" src="./images/Hugo.jpg" alt="Hugo Wegner">
+					<div class="section-02-card">
+						<img src="../images/character_Hugo.jpg" alt="Hugo Wegner">
 						<h3>Hugo W. de Moura Nessler</h3>
 					</div>
 				</div>
@@ -77,7 +85,9 @@
 				<div class="section-02-text-box">
 					<h3>Nossa essência</h3>
 					<p>Nascida de um propósito de vida, a Yamamoto Haus acredita no poder do ambiente em influenciar nossa saúde, bem-estar e comportamento e em como a natureza é uma grande influência nesse processo.  Visto isso, nosso escritório deseja oferecer através do design biofílico, soluções inteligentes que promovam uma experiência única e alinhada com a essência de cada indivíduo e tornar da casa um local que promova saúde, conforto ambiental e bem-estar, através da sustentabilidade e tecnologia. </p>       
-				</div> -->
+				</div>
+			</div>
+
 		</div>
 	</section>
 
