--- a/views/home.html
+++ b/views/home.html
@@ -62,7 +62,7 @@
 	</section>
 
 	<!-- Section 02 -->
-	<section class="section" id="essence">
+	<!-- <section class="section" id="essence">
 		<div class="section-02-content-wrapper">
 
 			<div class="section-02-title-container">
@@ -89,7 +89,7 @@
 			</div>
 
 		</div>
-	</section>
+	</section> -->
 
 	<script src="/js/app.js"></script>
 </body>
